--- a/inventory_service/src/main/resources/application.yml
+++ b/inventory_service/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8081
+  port: 8082
 
 spring:
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/order-service
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/inventory-service
     username: root
     password: mysql
     driver-class-name: com.mysql.cj.jdbc.Driver
