--- a/order_service/src/main/resources/application.properties
+++ b/order_service/src/main/resources/application.properties
@@ -1,1 +1,24 @@
-
+## Server Port
+#server.port=8081
+#
+## MySQL connection properties
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/order-service
+##spring.datasource.username=springuser
+##spring.datasource.password=ThePassword
+#spring.datasource.username=root
+#spring.datasource.password=mysql
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+## Drop and create new tables (create, create-drop, validate, update)
+## Only for testing purposes - comment this in production
+#spring.jpa.hibernate.ddl-auto=update
+#
+## Hibernate SQL dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+##spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#
+### Log JPA queries
+### Comment this in production
+##spring.jpa.show-sql=true
+##logging.level.org.hibernate.SQL=DEBUG
+##logging.level.org.hibernate.type=TRACE
