--- a/product_service/src/main/resources/application.properties
+++ b/product_service/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+#spring.data.mongodb.uri=mongodb+srv://necl0usr2:necl0usr2@nodeexpresscluster0.rbtfu.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.database=springboot
