--- a/sbc_microservice/discovery_server/src/main/resources/application.yml
+++ b/sbc_microservice/discovery_server/src/main/resources/application.yml
@@ -4,7 +4,21 @@ eureka:
     register-with-eureka: false
   instance:
     hostname: localhost
+  username: ${EUREKA_USERNAME:eureka}
+  password: ${EUREKA_PASSWORD:password}
+
+spring:
+  application:
+    name: discovery-server
+  security:
+    user:
+      name: eureka
+      password: password
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
 
 server:
   port: 8761
-s
