--- a/sbc_microservice/inventory_service/src/main/resources/application.yml
+++ b/sbc_microservice/inventory_service/src/main/resources/application.yml
@@ -1,7 +1,6 @@
-server:
-  port: 8082
-
 spring:
+  application:
+    name: inventory-service
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/inventory-service
     username: root
@@ -9,12 +8,26 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-        # globally_quoted_identifiers: true
     show-sql: true
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
+
+server:
+  port: 0
+
+eureka:
+  client:
+    service-url:
+      default-zone: http://eureka:password@localhost:8761/eureka
+  instance:
+    hostname: localhost
 
 logging:
   level:
