--- a/sbc_microservice/order_service/src/main/resources/application.yml
+++ b/sbc_microservice/order_service/src/main/resources/application.yml
@@ -1,7 +1,6 @@
-server:
-  port: 8081
-
 spring:
+  application:
+    name: order-service
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/order-service
     username: root
@@ -15,10 +14,75 @@ spring:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         # globally_quoted_identifiers: true
     show-sql: true
+  # Distributed tracing
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
+  # Kafka Properties
+  kafka:
+    bootstrap-servers: localhost:9092
+    template:
+      default-topic: notificationTopic
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring:
+          json:
+            type:
+              mapping: event:com.khmsolutions.order_service.event.OrderPlacedEvent
 
+server:
+  port: 0
+
+eureka:
+  client:
+    service-url:
+      default-zone: http://eureka:password@localhost:8761/eureka
+  instance:
+    hostname: localhost
+# Actuator Health and Metrics
+management:
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+# Logging
 logging:
   level:
     org:
       hibernate:
         SQL: DEBUG
         # type: TRACE
+
+#Resilinece4j Properties
+resilience4j:
+  circuitbreaker:
+    instances:
+      inventory:
+        registerHealthIndicator: true
+        event-consumer-buffer-size: 10
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 5
+        failureRateThreshold: 50
+        waitDurationInOpenState: 5s
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+  timelimiter:
+    instances:
+      inventory:
+        timeout-duration: 3s
+  retry:
+    instances:
+      inventory:
+        max-attempts: 3
+        wait-duration: 5s
