--- a/sbc_microservice/pom.xml
+++ b/sbc_microservice/pom.xml
@@ -17,7 +17,14 @@
         <module>product_service</module>
         <module>order_service</module>
         <module>inventory_service</module>
+        <module>discovery_server</module>
+        <module>api_gateway</module>
+        <module>notification_service</module>
     </modules>
+
+    <properties>
+        <spring-cloud.version>2021.0.4</spring-cloud.version>
+    </properties>
 
     <!-- https://www.testcontainers.org/ -->
     <dependencyManagement>
@@ -26,6 +33,13 @@
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers-bom</artifactId>
                 <version>1.17.5</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -44,6 +58,23 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <from>
+                        <image>
+                            eclipse-temurin:17.0.4.1_1-jre
+                        </image>
+                    </from>
+                    <to>
+                        <image>
+                            registry.hub.docker.com/kimmi1206/${artifactId}
+                        </image>
+                    </to>
                 </configuration>
             </plugin>
         </plugins>
