--- a/product_service/src/main/resources/application.properties
+++ b/product_service/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-#spring.data.mongodb.uri=mongodb+srv://necl0usr2:necl0usr2@nodeexpresscluster0.rbtfu.mongodb.net/?retryWrites=true&w=majority
-#spring.data.mongodb.database=springboot
+#spring.data.mongodb.uri=xxxxx
+#spring.data.mongodb.database=xxxxx
