--- a/inventory_service/src/main/resources/application.yml
+++ b/inventory_service/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/inventory-service
-    username: root
-    password: mysql
+    username: user
+    password: pass
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
