--- a/sbc_microservice/order_service/src/main/resources/application.properties
+++ b/sbc_microservice/order_service/src/main/resources/application.properties
@@ -3,10 +3,10 @@
 #
 ## MySQL connection properties
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/order-service
-##spring.datasource.username=springuser
-##spring.datasource.password=ThePassword
-#spring.datasource.username=root
-#spring.datasource.password=mysql
+##spring.datasource.username=user
+##spring.datasource.password=pass
+#spring.datasource.username=user
+#spring.datasource.password=pass
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #
 ## Drop and create new tables (create, create-drop, validate, update)
