--- a/sbc_microservice/product_service/src/main/resources/application.yml
+++ b/sbc_microservice/product_service/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     name: product-service
   data:
     mongodb:
-      uri: mongodb+srv://necl0usr2:necl0usr2@nodeexpresscluster0.rbtfu.mongodb.net/?retryWrites=true&w=majority
-      database: springboot
+      uri: mongodb+srv://user:pass@cluster.mongodb.net/?retryWrites=true&w=majority
+      database: dbname
   zipkin:
     base-url: http://localhost:9411
   sleuth:
